objects/ssot__MemberPlan__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AffiliationServiceTypeText__c</fullName>
        <label>Affiliation Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalIdentifier__c</fullName>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroupNumberText__c</fullName>
        <label>Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcarePayerNetworkId__c</fullName>
        <label>Healthcare Payer Network</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Member Plan Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuerNumberText__c</fullName>
        <label>Issuer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastVerificationDate__c</fullName>
        <label>Last Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__MemberAccountId__c</fullName>
        <label>Member Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberId__c</fullName>
        <label>Member</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberNumber__c</fullName>
        <label>Member Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberPlanNoteText__c</fullName>
        <label>Member Plan Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberPlan_PatientId_map_Patient_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MemberPlan_PatientId_map_Patient_Id_N_1</label>
        <referenceTo>ssot__Patient__dlm</referenceTo>
        <relationshipLabel>MemberPlan_PatientId_map_Patient_Id_N_1</relationshipLabel>
        <relationshipName>MemberPlan_PatientId_map_Patient_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayerAccountId__c</fullName>
        <label>Payer Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayerId__c</fullName>
        <label>Payer</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlanType__c</fullName>
        <label>Plan Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCarePhysicianName__c</fullName>
        <label>Primary Care Physician Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaserPlanId__c</fullName>
        <label>Purchaser Plan</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelationshipToSubscriber__c</fullName>
        <label>Relationship To Subscriber</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDate__c</fullName>
        <label>Source System Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubscriberId__c</fullName>
        <label>Subscriber</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationStatus__c</fullName>
        <label>Verification Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725667943_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MemberPlan_PurchaserPlanId_map_Purch_rel</label>
        <referenceTo>ssot__PurchaserPlan__dlm</referenceTo>
        <relationshipLabel>MemberPlan_PurchaserPlanId_map_Purch_rel</relationshipLabel>
        <relationshipName>rel_1716725667943_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721372010061_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MemberPlan_MemberAccountId_map_Accou_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>MemberPlan_MemberAccountId_map_Accou_rel</relationshipLabel>
        <relationshipName>rel_1721372010061_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721372029036_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MemberPlan_PayerAccountId_map_Accoun_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>MemberPlan_PayerAccountId_map_Accoun_rel</relationshipLabel>
        <relationshipName>rel_1721372029036_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>